--- a/src/app/example/orders/orders.component.html
+++ b/src/app/example/orders/orders.component.html
@@ -1,4 +1,10 @@
-<wpx-layout wpxTitle="动态表格"></wpx-layout>
+<wpx-layout wpxTitle="动态表格">
+  <ng-container *wpxLayoutAlert>
+    <ng-container *ngIf="!!table.ds.checkedNumber">
+      <ng-container *ngTemplateOutlet="table.wpxBulk"></ng-container>
+    </ng-container>
+  </ng-container>
+</wpx-layout>
 
 <nz-card [nzTitle]="table.wpxSearch" [nzExtra]="table.wpxTool">
   <wpx-table #table wpxKey="ex_orders" [wpxApi]="orders" [wpxFields]="fields"></wpx-table>
