--- a/projects/resources/src/lib/pictures/pictures.component.html
+++ b/projects/resources/src/lib/pictures/pictures.component.html
@@ -23,14 +23,29 @@
     </nz-col>
     <nz-col> </nz-col>
     <nz-col>
-      <nz-button-group>
-        <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
-          <i nz-icon nzType="reload"></i>
-        </button>
-        <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
-          <i nz-icon nzType="clear"></i>
-        </button>
-      </nz-button-group>
+      <nz-row [nzGutter]="8">
+        <nz-col>
+          <nz-button-group>
+            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+              <i nz-icon nzType="reload"></i>
+            </button>
+            <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+              <i nz-icon nzType="clear"></i>
+            </button>
+            <nz-badge [nzCount]="mediaRef.ds.checkedNumber">
+              <button nz-button nzType="text" nz-tooltip="批量操作" nz-dropdown [nzDropdownMenu]="bulkRef">
+                <i nz-icon nzType="inbox"></i>
+              </button>
+            </nz-badge>
+            <nz-dropdown-menu #bulkRef="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item (click)="bulkUnchecked()"> 取消选择 </li>
+                <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
+              </ul>
+            </nz-dropdown-menu>
+          </nz-button-group>
+        </nz-col>
+      </nz-row>
     </nz-col>
   </nz-row>
 </wpx-layout>
