--- a/projects/settings/src/lib/roles/roles.component.html
+++ b/projects/settings/src/lib/roles/roles.component.html
@@ -25,12 +25,15 @@
         <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
           <i nz-icon nzType="clear"></i>
         </button>
+        <button nz-button [nzType]="filter ? 'link' : 'text'" nz-tooltip="筛选" (click)="filter = !filter">
+          <i nz-icon nzType="filter"></i>
+        </button>
       </nz-button-group>
     </nz-col>
   </nz-row>
 </wpx-layout>
 
-<nz-card>
+<nz-card *ngIf="filter">
   <nz-tag
     nzMode="checkable"
     [nzChecked]="labels.length === matchLabels.size"
@@ -46,9 +49,9 @@
 </nz-card>
 
 <div style="margin-top: 12px">
-  <nz-list nzGrid>
-    <div nz-row [nzGutter]="16">
-      <div nz-col [nzSpan]="6" *ngFor="let item of items">
+  <nz-list nzGrid nzItemLayout="vertical">
+    <nz-row [nzGutter]="8">
+      <nz-col [nzSpan]="6" *ngFor="let item of items">
         <nz-list-item>
           <nz-ribbon [nzText]="permissionText" [nzColor]="!item.status ? 'red' : 'blue'">
             <ng-template #permissionText>
@@ -108,8 +111,8 @@
             </nz-card>
           </nz-ribbon>
         </nz-list-item>
-      </div>
-    </div>
+      </nz-col>
+    </nz-row>
   </nz-list>
 </div>
 
