--- a/projects/settings/src/lib/users/users.component.html
+++ b/projects/settings/src/lib/users/users.component.html
@@ -25,12 +25,15 @@
         <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
           <i nz-icon nzType="clear"></i>
         </button>
+        <button nz-button [nzType]="filter ? 'link' : 'text'" nz-tooltip="筛选" (click)="filter = !filter">
+          <i nz-icon nzType="filter"></i>
+        </button>
       </nz-button-group>
     </nz-col>
   </nz-row>
 </wpx-layout>
 
-<nz-card>
+<nz-card *ngIf="filter">
   <nz-tag
     nzMode="checkable"
     [nzChecked]="labels.length === matchLabels.size"
