--- a/projects/components/media/view/view.component.html
+++ b/projects/components/media/view/view.component.html
@@ -24,10 +24,10 @@
               </ng-template>
             </nz-card-meta>
             <ng-template #tagsRef>
-              <i nz-icon nzType="profile" nz-tooltip="详情"></i>
+              <i nz-icon nzType="profile" nz-tooltip="详情" (click)="detail(x)"></i>
             </ng-template>
             <ng-template #editRef>
-              <i nz-icon nzType="edit" nz-tooltip="编辑"></i>
+              <i nz-icon nzType="edit" nz-tooltip="编辑" (click)="form(x)"></i>
             </ng-template>
             <ng-template #deleteRef>
               <i
