--- a/projects/components/media/view/view.component.html
+++ b/projects/components/media/view/view.component.html
@@ -9,8 +9,8 @@
                 <img
                   nz-image
                   nzDisablePreview
-                  [nzSrc]="[x.url, 'thumbnail'] | wpxAssets"
-                  [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets"
+                  [nzSrc]="[x.url, 'thumbnail'] | wpxAssets: { params: x.params }"
+                  [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets: { params: x.params }"
                   [nzFallback]="[fallback!] | wpxAssets"
                   [alt]="x.name"
                 />
@@ -24,7 +24,7 @@
               </ng-template>
             </nz-card-meta>
             <ng-template #tagsRef>
-              <i nz-icon nzType="profile" nz-tooltip="详情" (click)="detail(x)"></i>
+              <i nz-icon nzType="setting" nz-tooltip="设置" (click)="detail(x)"></i>
             </ng-template>
             <ng-template #editRef>
               <i nz-icon nzType="edit" nz-tooltip="编辑" (click)="form(x)"></i>
