--- a/projects/resources/src/lib/videos/videos.component.html
+++ b/projects/resources/src/lib/videos/videos.component.html
@@ -1,5 +1,60 @@
 <wpx-layout wpxTitle="视频">
-  <button *wpxLayoutAction nz-button nzType="primary" nzShape="circle" nz-tooltip="新增">
-    <i nz-icon nzType="plus"></i>
-  </button>
+  <wpx-upload-transport *wpxLayoutAction (wpxChange)="upload($event)"></wpx-upload-transport>
+  <nz-row *wpxLayoutContent nzJustify="space-between">
+    <nz-col>
+      <nz-row [nzGutter]="8">
+        <nz-col>
+          <nz-input-group nzCompact>
+            <input
+              style="width: 420px"
+              type="text"
+              nz-input
+              placeholder="请输入搜索关键词"
+              [(ngModel)]="searchText"
+              (keyup.enter)="getData(true)"
+            />
+            <button nz-button (click)="getData(true)"><i nz-icon nzType="search"></i></button>
+          </nz-input-group>
+        </nz-col>
+        <nz-col>
+          <a nz-button nzType="link" disabled>高级搜索</a>
+        </nz-col>
+      </nz-row>
+    </nz-col>
+    <nz-col> </nz-col>
+    <nz-col>
+      <nz-row [nzGutter]="8">
+        <nz-col>
+          <nz-button-group>
+            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
+              <i nz-icon nzType="reload"></i>
+            </button>
+            <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
+              <i nz-icon nzType="clear"></i>
+            </button>
+            <nz-badge [nzCount]="mediaView.ds.checkedNumber">
+              <button
+                nz-button
+                nzType="text"
+                [nzDisabled]="!mediaView.ds.checkedNumber"
+                nz-tooltip="批量操作"
+                nz-dropdown
+                [nzDropdownMenu]="bulkRef"
+              >
+                <i nz-icon nzType="inbox"></i>
+              </button>
+            </nz-badge>
+            <nz-dropdown-menu #bulkRef="nzDropdownMenu">
+              <ul nz-menu>
+                <li nz-menu-item (click)="bulkUnchecked()"> 取消选择 </li>
+                <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
+              </ul>
+            </nz-dropdown-menu>
+          </nz-button-group>
+        </nz-col>
+      </nz-row>
+    </nz-col>
+  </nz-row>
 </wpx-layout>
+
+<wpx-media-view #mediaView type="video" fallback="/loading"></wpx-media-view>
