--- a/projects/components/media/view/view.component.html
+++ b/projects/components/media/view/view.component.html
@@ -9,16 +9,20 @@
           <div *ngFor="let x of item" nz-col [nzSpan]="24 / ds.itemSize">
             <nz-card nzHoverable [nzCover]="coverRef" [nzActions]="[tagsRef, editRef, deleteRef]">
               <ng-template #coverRef>
-                <div class="photo" (click)="preview(x)">
-                  <img
-                    nz-image
-                    nzDisablePreview
-                    [nzSrc]="[x.url, 'thumbnail'] | wpxAssets: { params: x.params }"
-                    [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets: { params: x.params }"
-                    [nzFallback]="[fallback!] | wpxAssets"
-                    [alt]="x.name"
-                  />
-                </div>
+                <ng-container [ngSwitch]="type">
+                  <ng-container *ngSwitchCase="'pictures'">
+                    <div class="photo" (click)="preview(x)">
+                      <img
+                        nz-image
+                        nzDisablePreview
+                        [nzSrc]="[x.url, 'thumbnail'] | wpxAssets: { params: x.params }"
+                        [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets: { params: x.params }"
+                        [nzFallback]="[fallback!] | wpxAssets"
+                        [alt]="x.name"
+                      />
+                    </div>
+                  </ng-container>
+                </ng-container>
               </ng-template>
               <nz-card-meta style="height: 50px" [nzDescription]="descriptionRef">
                 <ng-template #descriptionRef>
@@ -32,7 +36,11 @@
                 </ng-template>
               </nz-card-meta>
               <ng-template #tagsRef>
-                <i nz-icon nzType="setting" nz-tooltip="设置" (click)="pictureSettings(x)"></i>
+                <ng-container [ngSwitch]="type">
+                  <ng-container *ngSwitchCase="'pictures'">
+                    <i nz-icon nzType="setting" nz-tooltip="设置" (click)="picture(x)"></i>
+                  </ng-container>
+                </ng-container>
               </ng-template>
               <ng-template #editRef>
                 <i nz-icon nzType="edit" nz-tooltip="编辑" (click)="form(x)"></i>
@@ -43,7 +51,7 @@
                   nzType="delete"
                   nz-tooltip="删除"
                   nz-popconfirm
-                  nzPopconfirmTitle="您确定要删除该图片吗?"
+                  nzPopconfirmTitle="您确定要删除该资源吗?"
                   nzPopconfirmPlacement="bottom"
                   (nzOnConfirm)="delete(x)"
                 ></i>
