--- a/projects/components/upload/transport/transport.component.html
+++ b/projects/components/upload/transport/transport.component.html
@@ -1,5 +1,5 @@
 <nz-button-group>
-  <nz-upload class="upload" wpxUpload nzMultiple (nzChange)="change($event)">
+  <nz-upload class="upload" wpxUpload [wpxExt]="wpxExt" nzMultiple (nzChange)="change($event)">
     <button nz-button> <i nz-icon [nzType]="'upload'"></i> 上传 </button>
   </nz-upload>
   <button
