--- a/projects/components/media/view/view.component.html
+++ b/projects/components/media/view/view.component.html
@@ -1,64 +1,63 @@
 <cdk-virtual-scroll-viewport class="infinite-container" itemSize="351">
   <nz-list nzGrid nzItemLayout="vertical">
-    <ng-container *ngIf="ds.empty; else notEmpty">
-      <nz-list-empty></nz-list-empty>
-    </ng-container>
-    <ng-template #notEmpty>
-      <nz-list-item *cdkVirtualFor="let item of ds" style="padding-top: 0">
-        <nz-row style="width: 100%" [nzGutter]="8">
-          <div *ngFor="let x of item" nz-col [nzSpan]="24 / ds.itemSize">
-            <nz-card nzHoverable [nzCover]="coverRef" [nzActions]="[tagsRef, editRef, deleteRef]">
-              <ng-template #coverRef>
-                <ng-container [ngSwitch]="type">
-                  <ng-container *ngSwitchCase="'pictures'">
-                    <div class="photo" (click)="preview(x)">
-                      <img
-                        nz-image
-                        nzDisablePreview
-                        [nzSrc]="[x.url, 'thumbnail'] | wpxAssets: { params: x.params }"
-                        [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets: { params: x.params }"
-                        [alt]="x.name"
-                      />
-                    </div>
-                  </ng-container>
+    <nz-list-item *cdkVirtualFor="let item of ds" style="padding-top: 0">
+      <nz-row style="width: 100%" [nzGutter]="8">
+        <div *ngFor="let x of item" nz-col [nzSpan]="24 / ds.itemSize">
+          <nz-card nzHoverable [nzCover]="coverRef" [nzActions]="[tagsRef, editRef, deleteRef]">
+            <ng-template #coverRef>
+              <ng-container [ngSwitch]="type">
+                <ng-container *ngSwitchCase="'pictures'">
+                  <div class="photo" (click)="previewPicture(x)">
+                    <img
+                      nz-image
+                      nzDisablePreview
+                      [nzSrc]="[x.url, 'thumbnail'] | wpxAssets: { params: x.params }"
+                      [nzPlaceholder]="[x.url, 'placeholder'] | wpxAssets: { params: x.params }"
+                      [alt]="x.name"
+                    />
+                  </div>
                 </ng-container>
-              </ng-template>
-              <nz-card-meta style="height: 50px" [nzDescription]="descriptionRef">
-                <ng-template #descriptionRef>
-                  <label
-                    nz-checkbox
-                    [ngModel]="ds.checkedIds.has(x._id)"
-                    (ngModelChange)="ds.setChecked(x._id, $event)"
-                  >
-                    <p nz-typography nzEllipsis [nzEllipsisRows]="2" [nzContent]="x.name"></p>
-                  </label>
-                </ng-template>
-              </nz-card-meta>
-              <ng-template #tagsRef>
-                <ng-container [ngSwitch]="type">
-                  <ng-container *ngSwitchCase="'pictures'">
-                    <i nz-icon nzType="setting" nz-tooltip="设置" (click)="picture(x)"></i>
-                  </ng-container>
+                <ng-container *ngSwitchCase="'videos'">
+                  <div class="photo" (click)="previewPoster(x)">
+                    <img nz-image nzDisablePreview [nzSrc]="[x.url + '.webp'] | wpxAssets" [alt]="x.name" />
+                  </div>
                 </ng-container>
+              </ng-container>
+            </ng-template>
+            <nz-card-meta style="height: 50px" [nzDescription]="descriptionRef">
+              <ng-template #descriptionRef>
+                <label nz-checkbox [ngModel]="ds.checkedIds.has(x._id)" (ngModelChange)="ds.setChecked(x._id, $event)">
+                  <p nz-typography nzEllipsis [nzEllipsisRows]="2" [nzContent]="x.name"></p>
+                </label>
               </ng-template>
-              <ng-template #editRef>
-                <i nz-icon nzType="edit" nz-tooltip="编辑" (click)="form(x)"></i>
-              </ng-template>
-              <ng-template #deleteRef>
-                <i
-                  nz-icon
-                  nzType="delete"
-                  nz-tooltip="删除"
-                  nz-popconfirm
-                  nzPopconfirmTitle="您确定要删除该资源吗?"
-                  nzPopconfirmPlacement="bottom"
-                  (nzOnConfirm)="delete(x)"
-                ></i>
-              </ng-template>
-            </nz-card>
-          </div>
-        </nz-row>
-      </nz-list-item>
-    </ng-template>
+            </nz-card-meta>
+            <ng-template #tagsRef>
+              <ng-container [ngSwitch]="type">
+                <ng-container *ngSwitchCase="'pictures'">
+                  <i nz-icon nzType="setting" nz-tooltip="设置" (click)="picture(x)"></i>
+                </ng-container>
+                <ng-container *ngSwitchCase="'videos'">
+                  <i nz-icon nzType="play-square" nz-tooltip="播放" (click)="video(x)"></i>
+                </ng-container>
+              </ng-container>
+            </ng-template>
+            <ng-template #editRef>
+              <i nz-icon nzType="edit" nz-tooltip="编辑" (click)="form(x)"></i>
+            </ng-template>
+            <ng-template #deleteRef>
+              <i
+                nz-icon
+                nzType="delete"
+                nz-tooltip="删除"
+                nz-popconfirm
+                nzPopconfirmTitle="您确定要删除该资源吗?"
+                nzPopconfirmPlacement="bottom"
+                (nzOnConfirm)="delete(x)"
+              ></i>
+            </ng-template>
+          </nz-card>
+        </div>
+      </nz-row>
+    </nz-list-item>
   </nz-list>
 </cdk-virtual-scroll-viewport>
