--- a/projects/resources/src/lib/videos/videos.component.html
+++ b/projects/resources/src/lib/videos/videos.component.html
@@ -1,5 +1,5 @@
 <wpx-layout wpxTitle="视频">
-  <wpx-upload-transport *wpxLayoutAction (wpxChange)="upload($event)"></wpx-upload-transport>
+  <wpx-upload-transport *wpxLayoutAction wpxExt="video" (wpxChange)="upload($event)"></wpx-upload-transport>
   <nz-row *wpxLayoutContent nzJustify="space-between">
     <nz-col>
       <nz-row [nzGutter]="8">
@@ -57,4 +57,4 @@
   </nz-row>
 </wpx-layout>
 
-<wpx-media-view #mediaView type="videos" fallback="/loading"></wpx-media-view>
+<wpx-media-view #mediaView type="videos"></wpx-media-view>
