--- a/projects/resources/src/lib/pictures/pictures.component.html
+++ b/projects/resources/src/lib/pictures/pictures.component.html
@@ -57,4 +57,4 @@
   </nz-row>
 </wpx-layout>
 
-<wpx-media-view #mediaView type="pictures"></wpx-media-view>
+<wpx-media-view #mediaView wpxType="pictures" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
