--- a/projects/resources/src/lib/videos/videos.component.html
+++ b/projects/resources/src/lib/videos/videos.component.html
@@ -57,4 +57,4 @@
   </nz-row>
 </wpx-layout>
 
-<wpx-media-view #mediaView type="videos"></wpx-media-view>
+<wpx-media-view #mediaView wpxType="videos" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
