--- a/projects/components/media/view/video/video.component.html
+++ b/projects/components/media/view/video/video.component.html
@@ -1,4 +1,4 @@
-<video controls [poster]="[data.url + '_0.jpg'] | wpxAssets">
+<video controls [poster]="[data.url + '_0'] | wpxAssets">
   <source [src]="[data.url] | wpxAssets" />
   <p>
     您的浏览器不支持 HTML5 视频. 请点击
