--- a/projects/resources/src/lib/pictures/pictures.component.html
+++ b/projects/resources/src/lib/pictures/pictures.component.html
@@ -1,5 +1,17 @@
 <wpx-layout wpxTitle="图库">
-  <wpx-upload-transport *wpxLayoutAction wpxExt="image" (wpxChange)="upload($event)"></wpx-upload-transport>
+  <nz-alert
+    *wpxLayoutAlert
+    nzBanner
+    nzType="info"
+    nzMessage="接受 jpeg,png,bmp,gif,webp,avif 等文件类型的上传，其他文件将被阻止"
+    nzCloseable
+  ></nz-alert>
+  <wpx-upload-transport
+    *wpxLayoutAction
+    wpxExt="image"
+    [wpxAccept]="accept"
+    (wpxChange)="upload($event)"
+  ></wpx-upload-transport>
   <nz-row *wpxLayoutContent nzJustify="space-between">
     <nz-col>
       <nz-row [nzGutter]="8">
