--- a/projects/resources/src/lib/videos/videos.component.html
+++ b/projects/resources/src/lib/videos/videos.component.html
@@ -6,67 +6,12 @@
     nzMessage="接受 mp4 等文件类型的上传，其他文件将被阻止"
     nzCloseable
   ></nz-alert>
-  <wpx-upload-transport
-    *wpxLayoutAction
-    wpxExt="video"
-    [wpxAccept]="accept"
-    (wpxChange)="upload($event)"
-  ></wpx-upload-transport>
-  <nz-row *wpxLayoutContent nzJustify="space-between">
-    <nz-col>
-      <nz-row [nzGutter]="8">
-        <nz-col>
-          <nz-input-group nzCompact>
-            <input
-              style="width: 420px"
-              type="text"
-              nz-input
-              placeholder="请输入搜索关键词"
-              [(ngModel)]="searchText"
-              (keyup.enter)="getData(true)"
-            />
-            <button nz-button (click)="getData(true)"><i nz-icon nzType="search"></i></button>
-          </nz-input-group>
-        </nz-col>
-        <nz-col>
-          <a nz-button nzType="link" disabled>高级搜索</a>
-        </nz-col>
-      </nz-row>
-    </nz-col>
-    <nz-col> </nz-col>
-    <nz-col>
-      <nz-row [nzGutter]="8">
-        <nz-col>
-          <nz-button-group>
-            <button nz-button nzType="text" nz-tooltip="刷新" (click)="getData(true)">
-              <i nz-icon nzType="reload"></i>
-            </button>
-            <button nz-button nzType="text" nz-tooltip="清除搜索" (click)="clearSearch()">
-              <i nz-icon nzType="clear"></i>
-            </button>
-            <nz-badge [nzCount]="mediaView.ds.checkedNumber">
-              <button
-                nz-button
-                nzType="text"
-                [nzDisabled]="!mediaView.ds.checkedNumber"
-                nz-tooltip="批量操作"
-                nz-dropdown
-                [nzDropdownMenu]="bulkRef"
-              >
-                <i nz-icon nzType="inbox"></i>
-              </button>
-            </nz-badge>
-            <nz-dropdown-menu #bulkRef="nzDropdownMenu">
-              <ul nz-menu>
-                <li nz-menu-item (click)="bulkUnchecked()"> 取消选择 </li>
-                <li nz-menu-item nzDanger (click)="bulkDelete()"> 删除 </li>
-              </ul>
-            </nz-dropdown-menu>
-          </nz-button-group>
-        </nz-col>
-      </nz-row>
-    </nz-col>
-  </nz-row>
+  <ng-container *wpxLayoutAction>
+    <ng-container *ngTemplateOutlet="mediaViewRef.uploadRef"></ng-container>
+  </ng-container>
+  <ng-container *wpxLayoutContent>
+    <ng-container *ngTemplateOutlet="mediaViewRef.searchRef"></ng-container>
+  </ng-container>
 </wpx-layout>
 
-<wpx-media-view #mediaView wpxType="videos" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
+<wpx-media-view #mediaViewRef wpxType="videos" [wpxFallback]="['assets', 'dataflow.svg'] | wpxAssets"></wpx-media-view>
