--- a/src/app/example/media/media.component.html
+++ b/src/app/example/media/media.component.html
@@ -7,13 +7,14 @@
     <nz-form-item>
       <nz-form-label nzRequired>图片上传</nz-form-label>
       <nz-form-control>
-        <wpx-upload-avatar formControlName="avatar"> </wpx-upload-avatar>
+        <wpx-upload-avatar formControlName="avatar" wpxExt="image" [wpxAccept]="['image/jpeg', 'image/png']">
+        </wpx-upload-avatar>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
-      <nz-form-label nzRequired>图库导入</nz-form-label>
+      <nz-form-label nzRequired>图库</nz-form-label>
       <nz-form-control>
-        <wpx-media-picture formControlName="picture"></wpx-media-picture>
+        <wpx-media-pictures formControlName="picture"></wpx-media-pictures>
       </nz-form-control>
     </nz-form-item>
     <nz-form-item>
